# wandr

./: .todo  Cargo.toml  README.md  wandr.toml
src/: config.rs  main.rs  monitor.rs
