[package]
name = "wandr"
version = "0.1.0"
authors = ["n1kolas"]
edition = "2018"

[dependencies]
x11rb = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.5"
confy = "0.3"
serde_derive = "^1.0"
tokio = { version = "0.2.11", features = ["full"] }
log = "0.4"
env_logger = "0.7"
run_script = "0.6"